--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "sync-dotfiles-rs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
+description = "Sync dotfiles across machines"
 
 
 [dependencies]
-anyhow = "1.0.69"
+anyhow = "1.0"
 ron = "0.8"
-serde = { version = "1", features = ["derive"] }
-home = "0.5.4"
+home = "0.5"
+crypto-hash = "0.3"
+bincode = "1.3"
+walkdir = "2"
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
