sync-dotconfigs: Release 0.1.4
[Optimizations]
Optimized iterators usage and Reduced owned string copies for static data.
Optimized hash digest using XXhash3.

[Refactoring]
Add lifetimes to the static data.
Moved argument parsing entirely to clap.
Updated README for better user understanding.

[Fixes]
Fix a small bug during sync configs.

[Features]
Add support to load config from a file. `--cpath <filename>` flag.`
Add support to insert new config entries inside configuration file. `add <name> <path>` flag.
Add support to delete config folder and its contents. `cleanall` flag.
Add support to print current configuration. `-p | --print` flag.

Change-Id: Ia95a90948129c37b004a1fb862c95758a3c958e4
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,25 @@
 [package]
 name = "sync-dotfiles-rs"
-version = "0.1.2"
+version = "0.1.4"
 edition = "2021"
 authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
-description = "Sync dotfiles across machines"
+description = "Easily sync dotfiles from a source directory to a destination directory as per your configuration"
 
 
 [dependencies]
 anyhow = "1.0"
 ron = "0.8"
 home = "0.5"
-crypto-hash = "0.3"
 walkdir = "2"
 
 [dependencies.serde]
 version = "1"
 features = ["derive"]
+
+[dependencies.clap]
+version = "4"
+features = ["derive"]
+
+[dependencies.xxhash-rust]
+version = "0.8"
+features = ["xxh3"]
