--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sync-dotfiles-rs"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
 description = "Easily sync dotfiles from a source directory to a destination directory as per your configuration"
@@ -20,6 +20,8 @@ features = ["derive"]
 version = "4"
 features = ["derive"]
 
-[dependencies.xxhash-rust]
-version = "0.8"
-features = ["xxh3"]
+[dependencies.blake3]
+version = "1.3"
+
+[dependencies.rayon]
+version = "1.7"
