sync-dotfiles: Use merkel-hash and use parallel iterators
Change-Id: I4c8bc41e08dc7d7177cdbc1ee7b3d4c13d2b11f0
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ features = ["derive"]
 version = "4"
 features = ["derive"]
 
-[dependencies.blake3]
-version = "1.3"
+[dependencies.merkle_hash]
+version = "3.5"
+default-features = false
+features = ["parallel"]
 
 [dependencies.rayon]
 version = "1.7"
