--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "sync-dotfiles-rs"
 version = "0.1.8"
-edition = "2021"
 authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
+edition = "2021"
 description = "Easily sync dotfiles from a source directory to a destination directory as per your configuration"
-
 
 [dependencies]
 anyhow = "1.0"
-ron = "0.8"
 home = "0.5"
+rayon = "1.7"
+ron = "0.8"
+sha1 = "0.10"
 walkdir = "2.3"
 
 [dependencies.serde]
@@ -25,5 +26,6 @@ version = "3.5"
 default-features = false
 features = ["parallel"]
 
-[dependencies.rayon]
-version = "1.7"
+[dependencies.digest]
+version = "0.10"
+features = ["alloc"]
