--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,21 @@
 name = "sync-dotfiles-rs"
 version = "0.1.8"
 authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
+categories = ["command-line-utilities"]
 edition = "2021"
-description = "Easily sync dotfiles from a source directory to a destination directory as per your configuration"
+keywords = ["dotfiles", "config", "sync"]
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+description = "Easily sync dotfiles across machines"
 
 [dependencies]
 anyhow = "1.0"
 home = "0.5"
+lazy_static = "1.4"
 rayon = "1.7"
 ron = "0.8"
 sha1 = "0.10"
 walkdir = "2.3"
-lazy_static = "1.4"
 
 [dependencies.serde]
 version = "1.0"
